1998-07-05    <hartmans@fundsxpress.com>

	* client.c (main): do not declare h_errno

Wed Feb 18 15:39:14 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Tue Feb  4 20:35:45 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Fri Nov 22 15:49:09 1996  unknown  <bjaspan@mit.edu>

	* client.c (argv): use sizeof instead of h_length to determine
 	number of bytes of addr to copy from DNS response [krb5-misc/211]

Thu Nov  7 15:36:15 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* client.c (argv): 
	* server.c (argv): Check the error return from
 		krb5_init_context(), and print an error message if
 		necessary.

Fri Mar 15 21:39:25 1996  Ezra Peisach  (epeisach@kangaroo.mit.edu)

	* server.c: Remove declaration of krb5_kdc_default_options.

Fri Jul 7 15:51:45 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove explicit library handling and LDFLAGS.
	* configure.in - Add KRB5_LIBRARIES.


Thu Jun 15 17:44:23 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
	* configure.in - Add shared library usage check.

Sat Jun 10 23:00:05 1995  Tom Yu  (tlyu@dragons-lair)

	* client.c, server.c: krb5_auth_context redefinitions

Fri Jun  9 18:30:36 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Wed May 03 03:30:51 1995  Chris Provenzano (proven@mit.edu)

        * client.c: (krb5_recvauth()): No longer needs the rc_type arg.

Mon May 01 15:56:32 1995  Chris Provenzano (proven@mit.edu)

        * client.c (main()): Changes to auth_context to better
                support full addresses, for mk_safe() and friends.
